// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/Layout Component Equal-width multi-row 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="container"
      >
        <div
          className="row"
        >
          <div
            className="p-3 mb-2 text-white bg-dark col"
          >
            col
          </div>
          <div
            className="p-3 mb-2 text-white bg-primary col"
          >
            col
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="p-3 mb-2 text-white bg-primary col"
          >
            col
          </div>
          <div
            className="p-3 mb-2 text-white bg-dark col"
          >
            col
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Layout Component Mischiare e abbinare 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="container"
      >
        <div
          className="row"
        >
          <div
            className="p-3 mb-2 text-white bg-dark col-12 col-md-8"
          >
            .col-12 .col-md-8
          </div>
          <div
            className="p-3 mb-2 text-white bg-primary col-6 col-md-4"
          >
            .col-6 .col-md-4
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="p-3 mb-2 text-white bg-primary col-6 col-md-4"
          >
            .col-6 .col-md-4
          </div>
          <div
            className="p-3 mb-2 text-white bg-dark col-6 col-md-4"
          >
            .col-6 .col-md-4
          </div>
          <div
            className="p-3 mb-2 text-white bg-primary col-6 col-md-4"
          >
            .col-6 .col-md-4
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="p-3 mb-2 text-white bg-primary col-6"
          >
            .col-6
          </div>
          <div
            className="p-3 mb-2 text-white bg-dark col-6"
          >
            .col-6
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Layout Component Raccolti in orizzontale 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="container"
      >
        <div
          className="row"
        >
          <div
            className="p-3 mb-2 text-white bg-dark col-sm-8"
          >
            col-sm-8
          </div>
          <div
            className="p-3 mb-2 text-white bg-primary col-sm-4"
          >
            col-sm-4
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="p-3 mb-2 text-white bg-primary col"
          >
            col-sm
          </div>
          <div
            className="p-3 mb-2 text-white bg-dark col"
          >
            col-sm
          </div>
          <div
            className="p-3 mb-2 text-white bg-primary col"
          >
            col-sm
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Layout Component Set width of Column 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="container"
      >
        <div
          className="row"
        >
          <div
            className="p-3 mb-2 text-white bg-dark col"
          >
             1 di 3
          </div>
          <div
            className="p-3 mb-2 text-white bg-primary col-6"
          >
            2 di 3 (larga 6/12)
          </div>
          <div
            className="p-3 mb-2 text-white bg-dark col"
          >
            3 di 3
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="p-3 mb-2 text-white bg-dark col"
          >
            1 di 3
          </div>
          <div
            className="p-3 mb-2 text-white bg-primary col-5"
          >
            2 di 3 (larga 5/12)
          </div>
          <div
            className="p-3 mb-2 text-white bg-dark col"
          >
            3 di 3
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Layout Component Standardize widths 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="container"
      >
        <div
          className="row"
        >
          <div
            className="p-3 mb-2 text-white bg-dark col"
          >
             1 di 2
          </div>
          <div
            className="p-3 mb-2 text-white bg-primary col"
          >
            2 di 2
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="p-3 mb-2 text-white bg-dark col"
          >
            1 di 3
          </div>
          <div
            className="p-3 mb-2 text-white bg-primary col"
          >
            2 di 3
          </div>
          <div
            className="p-3 mb-2 text-white bg-dark col"
          >
            3 di 3
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Layout Component Tutti i breakpoint 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="container"
      >
        <div
          className="row"
        >
          <div
            className="p-3 mb-2 text-white bg-dark col"
          >
            col
          </div>
          <div
            className="p-3 mb-2 text-white bg-primary col"
          >
            col
          </div>
          <div
            className="p-3 mb-2 text-white bg-dark col"
          >
            col
          </div>
          <div
            className="p-3 mb-2 text-white bg-primary col"
          >
            col
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="p-3 mb-2 text-white bg-primary col-8"
          >
            col-8
          </div>
          <div
            className="p-3 mb-2 text-white bg-dark col-4"
          >
            col-4
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Layout Component Variable width content 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="container"
      >
        <div
          className="row"
        >
          <div
            className="p-3 mb-2 text-white bg-dark col-lg-2"
          >
            1 di 3
          </div>
          <div
            className="p-3 mb-2 text-white bg-primary col-auto"
          >
            Contenuto a larghezza variabile
          </div>
          <div
            className="p-3 mb-2 text-white bg-dark col-lg-2"
          >
            3 di 3
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="p-3 mb-2 text-white bg-dark col"
          >
            1 di 3
          </div>
          <div
            className="p-3 mb-2 text-white bg-primary col-md-auto"
          >
            Contenuto a larghezza variabile
          </div>
          <div
            className="p-3 mb-2 text-white bg-dark col-lg-2"
          >
            3 di 3
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
